improved the html

--- a/testground.html
+++ b/testground.html
@@ -2,7 +2,7 @@
 <html lang="en-UK">
 
 <head>
-  <title>Empty page</title>
+  <title>jsTestground</title>
   <meta charset="UTF-8">
   <script src="jquery.min.js"></script>
   <script src="jScripts/sloader.js"></script>
