--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>jsTestground</title>
   <meta charset="UTF-8">
-  <script src="jquery.min.js"></script>
+  <script src="jScripts/jquery.min.js"></script>
   <script src="jScripts/sloader.js"></script>
   <link rel="stylesheet" href="css/basic.css">
 </head>
